grif overlapping fix

--- a/client-side/src/styles/ImageCard.css
+++ b/client-side/src/styles/ImageCard.css
@@ -44,7 +44,7 @@
 
 
   @media screen and (max-width: 576px) {
-    .imgCard {
-        margin-bottom: 3rem;
+    .imgCard img {
+        height: 100%;
     }
 }
